# flatsurf

./: .clang-format  .codespellrc  .gitignore  .gitmodules  .travis.yml  .zenodo.json  AUTHORS  ChangeLog  Makefile.am  README.conda.md  README.md  asv.conf.json  benchmarks.json  conda-forge.yml  configure.ac  environment.yml  pixi.toml  rever.xsh
flatsurf-polygon/: configure.ac
flatsurf-polygon/src/: .gitignore  Makefile.am  alg_misc.cc  alg_t.cc  alg_t.h  algebraic.cc  algebraic.h  big_point.h  cylinder.h  defs.h  dir.cc  elementary_geometry.h  face.cc  globals.cc  input.cc  main.cc  math.cc  misc.cc  my_ostream.h  number_field.h  oedge.cc  params.cc  params.h  perturb.cc  pface.h  poly.h  psimplex.cc  puedge.h  reflect.cc  report.cc  saddleconf.h  summary.h  sweep.cc  triang.cc  two_complex.cc  two_complex.h  uedge.cc  uedge.h  vert_pattern.h  vertex.cc
libflatsurf/: Makefile.am  configure.ac  environment-flint2.yml  environment.yml
libflatsurf/benchmark/: .gitignore  Makefile.am  chain.benchmark.cc  flat_triangulation.benchmark.cc  flat_triangulation_collapsed.benchmark.cc  flat_triangulation_combinatorial.benchmark.cc  half_edge.benchmark.cc  main.cc  path.benchmark.cc  saddle_connection.benchmark.cc  saddle_connections.benchmark.cc  surfaces.hpp  vector.benchmark.cc  vertex.benchmark.cc
libflatsurf/flatsurf/: .gitignore  README.md  bound.hpp  ccw.hpp  cereal.hpp  chain.hpp  chain_iterator.hpp  code.hpp  contour_component.hpp  contour_connection.hpp  contour_decomposition.hpp  copyable.hpp  cppyy.hpp  decomposition_step.hpp  deformation.hpp  delaunay.hpp  delaunay_triangulation.hpp  edge.hpp  edge_map.hpp  edge_set.hpp  edge_set_iterator.hpp  eqivalence_class_code.hpp  equivalence.hpp  equivalence_class.hpp  equivalence_class_code.hpp  flat_triangulation.hpp  flat_triangulation_collapsed.hpp  flat_triangulation_combinatorial.hpp  flat_triangulation_combinatorics.hpp  flatsurf.hpp  flow_component.hpp  flow_connection.hpp  flow_decomposition.hpp  flow_triangulation.hpp  fmt.hpp  forward.hpp  half_edge.hpp  half_edge_intersection.hpp  half_edge_map.hpp  half_edge_set.hpp  (+38 more)
libflatsurf/m4/: ax_cxx_check_lib.m4
libflatsurf/recipe/: build.sh  conda_build_config.yaml  meta.yaml
libflatsurf/src/: Makefile.am  README.md  approximation.cc  assert_connection.cc  asserted_lengths.cc  bound.cc  ccw.cc  chain.cc  chain_iterator.cc  chain_vector.cc  collapsed_half_edge.cc  combinatorial_deformation_relation.cc  combinatorial_equivalence.cc  combinatorial_equivalence_class_code.cc  combinatorial_equivalence_walker.cc  composite_deformation_relation.cc  contour_component.cc  contour_component_state.cc  contour_connection.cc  contour_decomposition.cc  contour_decomposition_state.cc  deformation.cc  deformation_relation.cc  delaunay_triangulation.cc  edge.cc  edge_set.cc  edge_set_iterator.cc  equivalence.cc  equivalence_class.cc  equivalence_class_code.cc  flat_triangulation.cc  flat_triangulation_collapsed.cc  flat_triangulation_combinatorial.cc  flat_triangulation_combinatorics.cc  flip_deformation_relation.cc  flow_component.cc  flow_component_state.cc  flow_connection.cc  flow_decomposition.cc  flow_decomposition_state.cc  (+55 more)
libflatsurf/test/: .gitignore  Makefile.am  README.md  approximation.test.cc  bound.test.cc  cereal.helpers.hpp  cereal.test.cc  chain.test.cc  contour_component.test.cc  contour_decomposition.test.cc  deformation.test.cc  delaunay.test.cc  edge.test.cc  equivalence.test.cc  equivalence_class.test.cc  flat_triangulation.angle.cc  flat_triangulation.delaunay.cc  flat_triangulation.eliminate_marked_points.cc  flat_triangulation.flip.cc  flat_triangulation.insert.cc  flat_triangulation.isomorphism.cc  flat_triangulation.slit.cc  flat_triangulation.test.cc  flat_triangulation_collapsed.test.cc  flat_triangulation_combinatorial.test.cc  flip.test.cc  flow_decomposition.test.cc  half_edge.test.cc  interval_exchange_transformation.test.cc  length_along_triangulation.test.cc  libflatsurf.test.sh  main.cc  parabolic.test.cc  path.test.cc  permutation.test.cc  point.test.cc  quadratic_polynomial.test.cc  ray.test.cc  saddle_connection.test.cc  saddle_connections.benchmark.cc  (+8 more)
pyflatsurf/: Makefile.am  configure.ac  environment.yml
pyflatsurf/benchmark/: cylinder_survey.py  quadrilateral_survey.py  triangle_survey.py
pyflatsurf/recipe/: build.sh  cond_build_config.yaml  conda_build_config.yaml  meta.yaml
pyflatsurf/src/: .gitignore  MANIFEST.in.in  Makefile.am  README.md  setup.py  setup.py.in
pyflatsurf/survey/: README.md  quadrilateral_survey.py  triangle.py
pyflatsurf/test/: .gitignore  Makefile.am  bound.py  deformation.py  doc.py  equivalence_class.py  flat_triangulation.py  flat_triangulation_combinatorial.py  flow_decomposition.py  genus2.py  gothic.py  half_edge.py  point.py  python-doctest.sh.in  rank2_quadrilaterals.py  rank_one.py  saddle_connections.py  sage-doctest.sh.in  sage_flatsurf.py  surfaces.py  test-env.sh.in  triangulation.py  vector_gmp.py  vector_renf_elem.py  veech.py  veech_2n_gons_and_double_n_gons.py  vertex.py
src/: .gitignore  Makefile.am  alg_misc.cc  alg_t.cc  alg_t.h  algebraic.cc  algebraic.h  defs.h  dir.cc  face.cc  geometry.cc  getopt.c  getopt.h  getopt1.c  globals.cc  input.cc  log.cc  main.cc  math.cc  misc.cc  oedge.cc  params.cc  perturb.cc  psimplex.cc  reflect.cc  report.cc  saddleconf.h  slice-pvm.cc  slice.cc  slice.h  summary.cc  sweep.cc  triang.cc  two_complex.cc  two_complex.h  uedge.cc  vertex.cc
src/flatsurf/: .gitignore  Makefile.am  README.md  alg_misc.cc  alg_t.cc  alg_t.h  algebraic.cc  algebraic.h  big_point.h  cylinder.h  defs.h  dir.cc  dir.h  dmap.h  elementary_geometry.h  face.cc  face.h  globals.cc  globals.h  input.cc  main.cc  math.cc  misc.cc  my_ostream.h  number_field.h  oedge.cc  oedge.h  params.cc  params.h  perturb.cc  pface.h  poly.h  psimplex.cc  psimplex.h  puedge.h  pvertex.h  reflect.cc  report.cc  saddleconf.h  segment.h  (+13 more)
src/libflatsurf/: .gitignore  Makefile.am  bound.cc  ccw.cc  cppyy.cc  delaunay_triangulation.cc  edge.cc  flat_triangulation.cc  half_edge.cc  half_edge_map.cc  (+16 more)
(+1115 files in other folders)
